app/styles/main.scss
@import 'sass-bootstrap/lib/bootstrap';
@import 'sass-bootstrap/lib/responsive';

/* Global Styles */
@import url("http://fonts.googleapis.com/css?family=Allura");
@import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");

body {
  background-color: rgb(255, 255, 255);
  color: #000;
  filter: dropshadow(color= #fff, offx=0, offy=0);
  font-family: 'Lato', 'Helvetica Neue', Arial, sans-serif;
  font-size: 12px;
  font-weight: 300;
  line-height: 1.5em;
  margin: 0px !important;
  overflow-x: hidden;
  padding: 0px !important;
  text-align: center;
  text-shadow: 0px 0px 25px #fff;
}
a {
  -moz-transition: color 0.3s ease-out;
  -o-transition: color 0.3s ease-out;
  -webkit-transition: color 0.3s ease-out;
  color: #222;
  text-decoration: none;
  transition: color 0.3s ease-out;
  &:hover {
    color: #000;
  }
}
p {
  color: #000;
  font-size: 16px;
  font-weight: 300;
  line-height: 1.44em;
  &.slogan {
    font-size: 25px;
    font-weight: 300;
    line-height: 1.44em;
  }
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: #222;
  font-weight: 300;
  margin: 20px 0px;
}
h1 {
  font-size: 60px;
  line-height: 1.3091em;
}
h2 {
  font-size: 40px;
  line-height: 1.35em;
}
h3 {
  font-size: 25px;
  line-height: 1.44em;
}
h4 {
  font-size: 20px;
  line-height: 1.8em;
  /* Individual Styles */
}
header {
  padding: 75px 0px 0px;
}
footer {
  font-family: 'Helvetica Neue', Arial, sans-serif;
  margin-bottom: 10px;
  margin-top: 30px;
  text-align: left;
}
p.copyright {
  font-size: 12px;
  text-align: right;
}
#twitter {
  background-position: -40px 0px;
  background: url("/images/social-icons.png") -40px 0px no-repeat;
  float: left;
  height: 40px;
  width: 40px;
  span {
    display: none;
  }
}
ul.social-icons {
  li {
    float: left;
    list-style: none;
    margin: 0px 0px 0px 5px;
  }
  a {
    background: url("/images/social-icons.png") 0px 0px no-repeat;
    display: block;
    float: left;
    height: 40px;
    position: relative;
    width: 40px;
    &#rss {
      background-position: 0px 0px;
    }
    &#twitter {
      background-position: -40px 0px;
    }
    &#email {
      background-position: -80px 0px;
    }
    &#google {
      background-position: -120px 0px;
    }
    &#facebook {
      background-position: -160px 0px;
    }
    &#linkedin {
      background-position: -200px 0px;
    }
  }
}
#ribbon {
  background: url("/images/pattern.png") top left repeat;
  color: white;
  filter: alpha(opacity = 80);
  margin: 40px -100px 40px -100px !important;
  opacity: 0.8;
  padding: 20px 100px 0px;
  .thumbnail {
    background-color: #ececec;
    img {
      padding-bottom: 0.6em;
    }
    a,
    a p {
      font-size: 1.2em;
      font-weight: 500;
      line-height: 1.1em;
      text-decoration: none;
      small {
        color: #2a2a2a;
        display: block;
        font-size: 75%;
      }
    }
  }
}
.tweet_list {
  list-style: none;
  margin: 0px;
  overflow-y: hidden;
  padding: 0px;
  li {
    list-style-type: none;
    overflow: hidden auto;
    a {
      color: #222;
    }
  }
  .tweet_avatar {
    float: left;
    padding-right: 0px;
  }
}
#ticker {
  ul.tweet_list {
    height: 4em;
    overflow-y: hidden;
  }
  .tweet_list li {
    height: 4em;
  }
  text-align: left;
}
#contact {
  background-color: rgba(255, 255, 255, 0.5);
  margin-top: 2em;
}
#supersized-loader, #supersized li.image-loading {
  top: 30%;
  background-image: none !important;
}

